<resources>
    <string name="app_name">Pokedex</string>
    <string name="loading">Cargando…</string>
    <string name="load">loading</string>
    <string name="pokemon_id">Pokemon ID:</string>
    <string name="base_exp">Base Experience</string>
    <string name="weight">Peso</string>
    <string name="height">Altura</string>
    <string name="pokemon_image">Pokemon Image</string>
</resources>
