<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="10dp"
        tools:context=".PokemonActivity"
        android:id="@+id/scroller">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:gravity="center"
                android:id="@+id/pokemon_name"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:id="@+id/frontCover"
                android:contentDescription="@string/pokemon_image"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_id"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pokemon_id"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base_exp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pokemon_exp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pokemon_weight"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pokemon_height"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pokemon_sprites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>